# wyoming_xtts2

./: Dockerfile  download.py  engine.py  pyproject.toml
.github/workflows/: docker.yml
wyoming_xtts/: __init__.py  __main__.py  audio.py  config.py  download.py  engine.py  handler.py  segmenter.py  streaming.py  voice.py
